# sc_sim

./: .gitignore  .vscode-ctags  README.md  compile_commands.json  ros_plot.py  test_plugin_world.sdf
matlab/: quatconj.m  quatinv.m  quatmult.m  s03_ballpark_init.asv  s03_ballpark_init.m  so3_ballpark.slx  so3_ballpark.slxc  thruster_mapper.asv  thruster_mapper.m
matlab/slprj/_jitprj/: jitEngineAccessInfo.mat  s5Eujgv8nwbBh8EJQHpNHiD.l  s5Eujgv8nwbBh8EJQHpNHiD.mat  sA1J9DOxNhgFgaK99DznjYE.l  sA1J9DOxNhgFgaK99DznjYE.mat  sAYh25yi613HSFy51pMYfOB.l  sAYh25yi613HSFy51pMYfOB.mat  sAalQFz0fCB79iGiDrV4r5E.l  sAalQFz0fCB79iGiDrV4r5E.mat  sCQz9H14laYL84CvNPyxicB.l  sCQz9H14laYL84CvNPyxicB.mat  sDxA916FNt4yMfhBshkarSH.l  sDxA916FNt4yMfhBshkarSH.mat  sHkCCmqbVNFcZIK4JKf5CoB.l  sHkCCmqbVNFcZIK4JKf5CoB.mat  sHtD4X8CpmkLEkRLPgZm3sC.l  sHtD4X8CpmkLEkRLPgZm3sC.mat  sI4pSA4gojmYMSg9qG7HlPG.l  sI4pSA4gojmYMSg9qG7HlPG.mat  sLqLb9lycGspAtSrXuoc3iE.l  sLqLb9lycGspAtSrXuoc3iE.mat  sR7DmO208S4nDY7p3lH7JIH.l  sR7DmO208S4nDY7p3lH7JIH.mat  sS1rka0VC4kDtyXeoZ7nQDH.l  sS1rka0VC4kDtyXeoZ7nQDH.mat  sUWj5T9gt2eOXnJJtIcZmIG.l  sUWj5T9gt2eOXnJJtIcZmIG.mat  (+31 more)
src/py_spacecraft_control/: package.xml  setup.cfg  setup.py
src/py_thruster_allocation/: package.xml  setup.cfg  setup.py
src/spacecraft/: CMakeLists.txt  package.xml  spacecraft_rviz.rviz
src/spacecraft_msgs/: CMakeLists.txt  package.xml
src/spacecraft_plugins/: CMakeLists.txt  package.xml
src/spacecraft_plugins/src/: apply_force_plugin.cpp  print_plugin.cpp  thruster_plugin.cpp
src/urdf_example/: CMakeLists.txt  package.xml
(+119 files in other folders)
